# python-poetry-template

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
test/: test_add.py
